--- a/filtrarPropiedadesCapitalYGba.ipynb
+++ b/filtrarPropiedadesCapitalYGba.ipynb
@@ -23,9 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "filesProperati = filter( lambda f: not f.startswith('.'), os.listdir(\"datos/properati\"))"
@@ -779,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +786,7 @@
        "1669167"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -811,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -822,7 +820,7 @@
        "1339383"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -845,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +852,7 @@
        "1205487"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -883,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +892,7 @@
        "Name: properati_url, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1115,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1338,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1372,7 @@
        "0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,8 +1383,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Puedo eliminar latitud y longitud, ya que lat-lon tiene su informacion\n",
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1413,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1424,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1457,7 @@
        "390251"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,8 +1468,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "casas_duplicadas = casas[casas.duplicated(subset = [\"properati_url\",\"price_aprox_usd\",\"price_usd_per_m2\",\"rooms\",\"floor\"])]"
@@ -1477,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1488,7 @@
        "218206"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1497,8 +1499,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {},
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "casas_unicas = casas.drop_duplicates(subset = [\"properati_url\",\"price_aprox_usd\",\"price_usd_per_m2\",\"rooms\",\"floor\"])"
@@ -1506,8 +1510,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "resto_propiedades = data[data[\"property_type\"] != \"house\"]"
@@ -1515,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1532,8 +1538,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {},
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_juntada = pd.concat([resto_propiedades,casas_unicas])"
@@ -1541,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1558,7 @@
        "987281"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1561,8 +1569,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "stores = data_juntada[data_juntada[\"property_type\"] == \"store\"]"
@@ -1570,8 +1580,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
-   "metadata": {},
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "stores_duplicadas = stores[stores.duplicated(subset=[\"properati_url\",\"price_aprox_usd\",\"price_usd_per_m2\",\"rooms\",\"floor\"])]"
@@ -1579,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1605,7 +1617,7 @@
        "8900"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1616,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1630,7 +1642,7 @@
        "Name: properati_url, dtype: int64"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1641,8 +1653,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
-   "metadata": {},
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "stores_unicos = stores.drop_duplicates(subset=[\"properati_url\",\"price_aprox_usd\",\"price_usd_per_m2\",\"rooms\",\"floor\"])"
@@ -1650,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1673,7 @@
        "10848"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -1681,8 +1695,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
-   "metadata": {},
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = pd.concat([resto_props,stores_unicos])"
@@ -1690,30 +1706,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sin_publicaciones_duplicadas = data.drop_duplicates(subset=[\"properati_url\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 242,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sin_publicaciones_duplicadas.to_csv(\"datosCabaYGBA\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sin_publicaciones_duplicadas = data[(~data.duplicated()) | (data['properati_url'].isnull())]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "686484"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sin_publicaciones_duplicadas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sin_publicaciones_duplicadas.to_csv(\"datosCabaYGBA.csv\")"
+   ]
   }
  ],
  "metadata": {
