--- a/filtrarPropiedadesCapitalYGba.ipynb
+++ b/filtrarPropiedadesCapitalYGba.ipynb
@@ -23,7 +23,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filesProperati = filter( lambda f: not f.startswith('.'), os.listdir(\"datos/properati\"))"
@@ -583,7 +585,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for df in filtrados:\n",
@@ -638,7 +642,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Primero le pongo el mismo nombre a la superficie total\n",
@@ -706,7 +712,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for df in filtrados:\n",
@@ -1738,7 +1746,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sin_publicaciones_duplicadas.to_csv(\"datosCabaYGBA.csv\")"
